--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <header>
         <h1>Welcome to My Portfolio</h1>
     </header>
-    
+    <nav>
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+	<li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
     <main>
         <p>This is my personal website where I showcase my work.</p>
     </main>
