Add contact section

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>My AWESOME Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+<footer>
+    <p>&copy; 2025 My Portfolio. All rights reserved.</p>
+</footer>
 <body>
     <header>
         <h1>Welcome to My Portfolio</h1>
